--- a/app/src/main/res/menu/home_menu.xml
+++ b/app/src/main/res/menu/home_menu.xml
@@ -14,11 +14,22 @@
             android:id="@+id/settingsFragment"
             android:title="Settings"/>
 
+        <item
+            android:icon="@drawable/ic_add_voter"
+            android:id="@+id/addVotersFragment"
+            android:title="Register Voters"/>
+
+        <item
+            android:icon="@drawable/ic_contestants"
+            android:id="@+id/logout"
+            android:title="Logout"/>
+
     </group>
 
     <item
 
         android:id="@+id/adminPanel"
+        android:visible="false"
         android:icon="@drawable/ic_access_control"
         android:title="Admin Panel">
 
@@ -27,10 +38,11 @@
                 android:icon="@drawable/ic_add_voter"
                 android:id="@+id/addContestantsFragment"
                 android:title="Register Contestant"/>
-            <item
-                android:icon="@drawable/ic_add_voter"
-                android:id="@+id/addVotersFragment"
-                android:title="Register Voters"/>
+<!--            <item-->
+<!--                android:icon="@drawable/ic_add_voter"-->
+<!--                android:id="@+id/addVotersFragment"-->
+<!--                android:visible="false"-->
+<!--                android:title="Register Voters"/>-->
             <item
                 android:icon="@drawable/ic_baseline_timer_24"
                 android:id="@+id/setElectionTimeFragment"
